examples/test/testpolicy9294.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9294
  namespace: namespace21
spec:
  podSelector:
    matchLabels:
      key7: value21
      key19: value42
      key27: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value4
          key7: value42
          key18: value14
      podSelector:
        matchLabels:
          key24: value9
          key15: value21
